--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,6 @@ spring:
             scope:
               - email
               - profile
+jwt:
+  issuer: kseoyeoni98@gmail.com
+  secret_key: secret-key
